# unified-engine

./: .gitattributes  .gitignore  CHANGELOG.md  HARDWARE_BEHAVIORS.md  HARDWARE_OPS_MANIFEST.md  LICENSE  MANIFEST.in  MODEL_LIB_CORE_SPEC.md  Makefile  README.md  clean_model_bin_dirs.sh  clean_program_bins.sh  demo.py  dequantize_core_trace_64_128_IF4-FP.csv  dequantize_core_trace_64_128_IF4-FP_perfetto.json  dequantize_core_trace_64_128_IF4-INT.csv  dequantize_core_trace_64_128_IF4-INT_perfetto.json  dequantize_core_trace_64_128_IF8-FP.csv  dequantize_core_trace_64_128_IF8-FP_perfetto.json  dequantize_core_trace_64_128_IF8-INT.csv  dequantize_core_trace_64_128_IF8-INT_perfetto.json  gemma3_test.py  instructions.txt  kernel_snr.py  llama32_1b_test.py  matmat_mul_non_aligned_writeback_core_trace_2_256_32.csv  matmat_mul_non_aligned_writeback_core_trace_2_256_32_perfetto.json  model_auto_test.py  model_lib_core.py  nn_lib.py  pbi_mode_guide.md  program_flash.tcl  program_fpga.tcl  pyproject.toml  quant_lib.py  quant_schemas.py  quantized_fp4_core_trace_64_2048.csv  quantized_fp4_core_trace_64_2048_perfetto.json  randomize_dram.py  read_trace.py  (+14 more)
codebooks/: codebook_d1024_b4.json
gemma3_bin/: decoder_program.json  gemma3_config.json
gemma3_example/: gemma3_test.py
kernel_select/: gemma3.py  hlo.py  ir_harness.py  k_select.py  usage.md  workload_detect.py
llama3.2_1b_example/: README.md  llama3.2_1b_config.json  llama3.2_1b_test.py  llama32_1b_config.json  llama32_1b_test.py
parakeet_example/: batch_norm_kernel.py  parakeet_config.json  parakeet_test.py
qwen3_1.7b_example/: README.md  qwen3_1.7b_config.json  qwen3_1.7b_test.py
rust/apex-ue/: Cargo.toml
rust/apex-ue/src/: gemma4_e2b.rs  lib.rs  profile.rs  xdma.rs
rvllm/: GEMMA4_E2B.md  (+2 more)
(+190 files in other folders)
