[package]
name = "apex-ue"
version = "0.1.0"
edition = "2021"
description = "Rust runtime scaffold for Apex Compute Unified Engine boards"

[lib]
name = "apex_ue"
path = "src/lib.rs"

[[bin]]
name = "apex-probe"
path = "src/bin/apex-probe.rs"

[[bin]]
name = "gemma4-e2b-plan"
path = "src/bin/gemma4-e2b-plan.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
